--- a/TriangleLib/TriangleLib.Tests/TriangleLib.Tests.csproj
+++ b/TriangleLib/TriangleLib.Tests/TriangleLib.Tests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TriangleLib\TriangleLib.csproj" />
+  </ItemGroup>
+
 </Project>
